--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -18,19 +18,18 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v4
-
       - name: ⎔ Setup node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: ▶️ Run setup script
-        run: npm run setup
+      - name: ▶️ Add repo
+        run:
+          npx --yes epicshop add ${{ github.event.repository.name }} ./workshop
 
       - name: ʦ TypeScript
         run: npm run typecheck
+        working-directory: ./workshop
 
       # TODO: re-enable linting
       # - name: ⬣ ESLint
