--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "#*": "./*"
   },
   "scripts": {
-    "postinstall": "cd ./epicshop && npm install",
-    "start": "npx --prefix ./epicshop epicshop start",
-    "dev": "npx --prefix ./epicshop epicshop start",
+    "postinstall": "cd ./epicshop && pkgmgr install",
+    "start": "pkgmgrx --prefix ./epicshop epicshop start",
+    "dev": "pkgmgrx --prefix ./epicshop epicshop start",
     "setup": "node ./epicshop/setup.js",
     "setup:custom": "node ./epicshop/setup-custom.js",
     "build": "cd ./playground && npm run build",
@@ -63,7 +63,8 @@
     "eslint": "^9.34.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "pkgmgr": "^1.1.1"
   },
   "workspaces": [
     "./exercises/**/*"
